# remote_input_controller

./: .env  .gitignore  Cargo.toml  README.md  TODO.md  package.json  plan.md  test_remote_input.ps1
src/: app_state.rs  commands.rs  input.rs  main.rs  qr_code.rs  tray_icon.rs  tray_menu.rs  ui_native.rs  web_socket.rs
src/server/: connection.rs  input_types.rs  message_handler.rs  mod.rs  tls.rs
src/web_socket/: input_types.rs
web/: package.json  vite.config.js
