[package]
name = "remote_input_controller"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
enigo = "*"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.21"
tokio-tungstenite = { version = "0.21", features = ["rustls"] }
futures-util = "0.3"
systray = "0.4.0"
qrcode-generator = "4.1"
image = "0.24"
local-ip-address = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
native-dialog = "0.6"
rustls-pemfile = "1.0"
rustls = "0.20"
sha2 = "0.10"
