[package]
name = "remote_input_controller"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = "0.27.2"
strum_macros = "0.27.2"
enigo = "0.5.0"
tokio = { version = "1.46.1", features = ["full"] }
tungstenite = "0.27.0"
tokio-tungstenite = { version = "0.21", features = ["rustls"] }
futures-util = "0.3"
tray-icon = "0.21.0"
qrcode-generator = "5.0.0"
image = "0.25.6"
local-ip-address = "0.6.5"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
native-dialog = "0.9.0"
rustls-pemfile = "2.2.0"
sha2 = "0.10"
tokio-rustls = "0.25"
