[package]
name = "remote_input_controller"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = "0.27.2"
strum_macros = "0.27.2"
enigo = "0.5.0"
tokio = { version = "1.46.1", features = ["full"] }
tungstenite = "0.27.0"
tokio-tungstenite = { version = "0.21", features = ["rustls"] }
futures-util = "0.3"
tray-icon = "0.21.0"
winit = "0.29"
qrcode = { version = "0.14.1", features = ["image"] }
image = "0.25.1"
resvg = "0.41.0"
usvg = "0.41.0"
local-ip-address = "0.6.5"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rustls-pemfile = "2.2.0"
sha2 = "0.10"
tokio-rustls = "0.26.2"
rustls-pki-types = "1"
log = "0.4"
env_logger = "0.11"
egui = { version = "0.32.0", features = ["persistence"] }
eframe = "0.32.0"
arboard = "3.3.0"
egui-phosphor = "0.10.0"
